<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:background="@drawable/top_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:background="@drawable/bottom_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/pristineImg"
                android:layout_gravity="center"
                android:contentDescription="@string/logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/get_data"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/emailLayout"
                android:padding="5dp"
                android:hint="@string/email_input"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="1dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="20dp"-->
<!--                android:hint="@string/password"-->
<!--                app:boxStrokeColor="@color/black"-->
<!--                app:boxStrokeWidth="1dp"-->
<!--                android:id="@+id/passwordLayout"-->
<!--                app:errorEnabled="true"-->
<!--                android:padding="5dp"-->
<!--                app:passwordToggleEnabled="true">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/passwordInput"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:inputType="textPassword" />-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                >-->


<!--                <TextView-->
<!--                    android:id="@+id/forgotPassword"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="30dp"-->
<!--                    android:layout_weight="3"-->
<!--                    android:clickable="true"-->
<!--                    android:focusable="true"-->
<!--                    android:text="@string/forgot_password"-->
<!--                    android:textColor="#0B2697"-->
<!--                    android:textSize="14sp" />-->

<!--                <com.google.android.material.checkbox.MaterialCheckBox-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/remember_me"-->
<!--                    android:layout_weight="1"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:id="@+id/rememberMe" />-->

<!--            </LinearLayout>-->
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progrssBarLogin"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:indeterminateTint="#534BE3"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/error"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:visibility="gone"
                android:padding="20dp"
                android:id="@+id/errorText"
                />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progrssBar"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:indeterminateTint="#534BE3"
                android:visibility="gone"

                />

            <Button
                android:id="@+id/getData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#534BE3"
                android:text="@string/get_data" />

        <!-- User Details Show -->

            <LinearLayout
                android:id="@+id/details"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_gravity="center"
               >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/firstName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                        <TextView
                            android:id="@+id/middleName"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="3sp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/lastName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3sp"
                            android:textColor="@color/black"
                            android:textSize="18sp"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_email"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company_id"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/companyId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/comapny_id_"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emp_id_"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/empId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/emp_id"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/state_"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>